# opengl-and-C

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  compile_commands.json
.cache/clangd/index/: aabb2d.h.43E9F5F6BD59CF30.idx  affine-mat.h.58D1C6AF5B5F05B9.idx  affine-post.h.8AEB6A1F71E236AA.idx  affine-pre.h.1D2DBF60C99E32BB.idx  affine.h.04C61F1FBC495915.idx  affine.h.3D1405ACFE364F2E.idx  affine2d.h.C4A39C581AF6124B.idx  (+69 more)
include/: camera.h  ecs.h  ecscomponentmethods.h  ecscomponents.h  engine.h  eventmanager.h  gbuffer.h  material.h  mesh.h  renderer.h  renderpass.h  resourcemanager.h  shader.h  stb_image.h  texture.h  vector.h  window.h
include/cameras/: perspectivecamera.h
include/cameraviews/: fullscreen.h  grid.h
include/components/: cameracomponent.h  materialComponent.h  materialcomponent.h  meshcomponent.h  transformcomponent.h
include/glad/: glad.h
include/materials/: defaultMaterial.h  defaultmaterial.h
include/meshes/: staticmesh.h
include/renderPasses/: geometrypass.h  outputpass.h
shaders/: default.frag  default.vert  geom.frag  geom.vert  quad.frag  quad.vert
src/: camera.c  ecs.c  engine.c  eventmanager.c  gbuffer.c  glad.c  main.c  mesh.c  renderer.c  resourcemanager.c  shader.c  texture.c  window.c
src/cameras/: perspectivecamera.c
src/cameraviews/: fullscreen.c  grid.c
src/components/: cameracomponent.c  materialComponent.c  materialcomponent.c  meshcomponent.c  transformcomponent.c
src/materials/: defaultMaterial.c
src/meshes/: staticmesh.c
src/renderpasses/: geometrypass.c  outputpass.c
